<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Object Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="main_action_about">About the author</string>
    <string name="main_action_licences">Third party licences</string>
    <string name="main_mode_select_desc_str">Select mode:</string>
    <string name="butt_main_recognize_str">Recognize tags</string>
    <string name="title_activity_recognize">Recognizer</string>
    <string name="recognize_button_screenshot">Screenshot</string>
    <string name="recognize_action_resolution">Resolution</string>
    <string name="resolution_dialog_ok">OK</string>
    <string name="title_activity_marker_generator">Tag previews</string>
    <string name="butt_main_generate_str">Preview tags</string>
    <string name="title_activity_about">App\'s author</string>
    <string name="title_activity_licences">Licences</string>
    <string name="title_activity_driver">Motor driver</string>
    <string name="title_activity_logcat">LogCat</string>
    <string name="title_activity_othercode">Other source codes</string>
    <string name="butt_main_driver">Drive the motors</string>
    <string name="butt_main_logcat_str">Logcat</string>
    <string name="main_action_logcat">Logcat</string>
    <string name="recognize_action_set_tag">Set tag</string>
    <string name="recognize_action_debug">Statistics</string>
    <string name="main_action_othercode">Other source codes</string>
    <string name="recognize_action_set_threads">Threads</string>
    <string name="recognize_action_graph">CPU chart</string>
    <string name="recognizer_force_speaking">Force speaking</string>
    <string name="WHAT_TAG_FOLLOW">What tag number should I follow? Your options: </string>
    <string name="DONT_SEE_TAGZ">I don\'t see any tags, stopping! </string>
    <string name="FOLLOWING">Following tag number </string>
    <string name="I_DIDNT_CATCH_THAT">I didn\'t catch that! you said: </string>
    <string name="I_AM_NOT_SURE">I\'m not sure what you mean! you said: </string>
    <string name="PLEASE_REPEAT">, please repeat! </string>
    <string name="IS_IT_OK">, is it ok? </string>
    <string name="ERROR">, error occured, please repeat! </string>
    <string name="FATAL_ERROR">, error occured, stopping recognizer module! </string>
    <string name="ERROR_CODE_1">Network timeout </string>
    <string name="ERROR_CODE_2">Network </string>
    <string name="ERROR_CODE_3">Audio recording </string>
    <string name="ERROR_CODE_4">Server side </string>
    <string name="ERROR_CODE_5">Client side </string>
    <string name="ERROR_CODE_6">Speech timeout </string>
    <string name="ERROR_CODE_7">No match </string>
    <string name="ERROR_CODE_8">Recognizer busy </string>
    <string name="ERROR_CODE_9">Insufficient permissions </string>
    <string name="response_yes">yes </string>
    <string name="response_no">no </string>
    <string name="servo_X_range_string">X servo range: </string>
    <string name="servo_Z_range_string">Z servo range: </string>
    
    <string name="numminus">minus</string>
    <string name="num0">zero</string>
    <string name="num1">one</string>
    <string name="num2">two</string>
    <string name="num3">three</string>
    <string name="num4">four</string>
    <string name="num5">five</string>
    <string name="num6">six</string>
    <string name="num7">seven</string>
    <string name="num8">eight</string>
    <string name="num9">nine</string>
    <string name="num10">ten</string>
    <string name="num11">eleven</string>
    <string name="num12">twelve</string>
    <string name="num13">theerteen</string>
    <string name="num14">fourteen</string>
    <string name="num15">fifteen</string>
    <string name="num16">sixteen</string>
    <string name="num17">seventeen</string>
    <string name="num18">eighteen</string>
    <string name="num19">nineteen</string>
    <string name="num20">twenty</string>
    <string name="num30">thirty</string>
    <string name="num40">forty</string>
    <string name="num50">fifty</string>
    <string name="num60">sixty</string>
    <string name="num70">seventy</string>
    <string name="num80">eighty</string>
    <string name="num90">ninety</string>
    <string name="num100">one houndred</string>
    <string name="num200">two houndred</string>
    <string name="num300">three houndred</string>
    <string name="num400">four houndred</string>
    <string name="num500">five houndred</string>
    <string name="num600">six houndred</string>
    <string name="num700">seven houndred</string>
    <string name="num800">eight houndred</string>
    <string name="num900">nine houndred</string>

    <string name="num1th">first</string>
    <string name="num2th">second</string>
    <string name="num3th">third</string>
    <string name="num5th">fifth</string>
    <string name="num8th">eighth</string>
    <string name="num9th">ninth</string>
    <string name="num20th">twentieth</string>
    <string name="num30th">thirtieth</string>
    <string name="num40th">fortieth</string>
    <string name="num50th">fiftieth</string>
    <string name="num60th">sixtieth</string>
    <string name="num70th">seventieth</string>
    <string name="num80th">eightieth</string>
    <string name="num90th">ninetieth</string>
    <string name="logcat_clear_button_string">Clear</string>
    <string name="mainActivity_recognizer_string">Recognizer</string>
    <string name="main_recognizer">Recognizer</string>
    <string name="main_controller">Controller</string>
    <string name="calibrate_servo1_min_text">Servo 1 min</string>
    <string name="calibrate_servo1_max_text">Servo 1 max</string>
    <string name="calibrate_servo2_min_text">Servo 2 min</string>
    <string name="calibrate_servo2_max_text">Servo 2 max</string>
</resources>