<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="simple.as.fuck.objecttrackerv2.MainActivity" >

    <item
        android:id="@+id/recognize_action_resolution"
        android:orderInCategory="100"
        android:title="@string/recognize_action_resolution"/>
    <item
		android:id="@+id/recognize_action_set_tag"
		android:orderInCategory="100"
		android:title="@string/recognize_action_set_tag"/>
    <item
		android:id="@+id/recognize_action_set_threads"
		android:orderInCategory="100"
		android:title="@string/recognize_action_set_threads"/>
    <item
		android:id="@+id/recognize_action_debug"
        android:orderInCategory="100"
		android:title="@string/recognize_action_debug" android:checked="false" android:checkable="true"/>
    <item
		android:id="@+id/recognize_action_graph"
        android:orderInCategory="100"
		android:title="@string/recognize_action_graph" android:checked="false" android:checkable="true"/>
    <item
		android:id="@+id/recognize_force_speaking"
        android:orderInCategory="100"
		android:title="@string/recognizer_force_speaking" android:checked="false" android:checkable="true"/>

</menu>
