<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="simple.as.fuck.objecttrackerv2.MainActivity" >

    <TextView
        android:id="@+id/logcat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_mode_select_desc_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/butt_main_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logcat_text_view"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logcat_text_view"
        android:text="@string/butt_main_driver" />

    <Button
        android:id="@+id/butt_main_recognizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butt_main_driver"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/butt_main_driver"
        android:text="@string/butt_main_recognize_str" />

    <Button
        android:id="@+id/butt_main_marker_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butt_main_recognizer"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/butt_main_recognizer"
        android:text="@string/butt_main_generate_str" />

    <Button
        android:id="@+id/butt_main_facefollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butt_main_marker_gen"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/butt_main_marker_gen"
        android:text="Button" />

</RelativeLayout>